src/traceView/trace-view.css
.seecoderun-tooltip {
   background-color: #FFF;
   background-image: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.1));
   background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.1));
   border: 1px solid gray;
   border-radius: 1px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   color: black;
   padding: 3px 4px;
   position: absolute;
   z-index: 10;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   cursor: default;
   white-space: pre;
   word-wrap: break-word;
   line-height: normal;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
   pointer-events: none;
   display: none;
}

.ace_gutter-cell.seecoderun-gutter-decoration {
   background-color: #FFF;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
}

.ace_gutter-cell.seecoderun-gutter-decoration:hover {
    color: #FFF;
    background-color: #0066ff;
}

.seecoderun-gutter-decoration-active {
    color: #0066ff;
}

#gutterTooltip {
   position: absolute;
   background-color: #FFF;
   border-radius: 0px;
   box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.3);
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   cursor: default;
   line-height: normal;
   font-style: normal;
   font-weight: normal;
   display: none;
   z-index: 999999;
 }

#gutterTooltip > div > div {
   display:inline-block;
   cursor: pointer;
}

#gutterTooltip > div >:first-child {
    padding-right: 4px;
}

#gutterTooltip > div >:last-child {
    padding-left: 4px;
}

#gutterTooltip > div > div:hover {
    background-color: #eee;
}

#gutterTooltip > div > div:active {
    background-color: #0066ff;
}

#gutterNavigatorSlider {
   min-width: 40px;
}

